// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawing.ts SvgDrawing clear() 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`drawing.ts SvgDrawing close 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M 0 0 C 0.4 0.4 0.49 0.75 1 1 C 1.36 1.18 1.64 1.18 2 1 C 2.51 0.75 2.6 0.4 3 0 Z"
    fill="none"
    stroke="#000"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
</svg>
`;

exports[`drawing.ts SvgDrawing curve = false 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M 0 0 L 1 1 L 2 1 L 3 0"
    fill="none"
    stroke="#000"
    stroke-linecap="mitter"
    stroke-linejoin="square"
    stroke-width="1"
  />
</svg>
`;

exports[`drawing.ts SvgDrawing default 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M 0 0 C 0.4 0.4 0.49 0.75 1 1 C 1.36 1.18 1.64 1.18 2 1 C 2.51 0.75 2.6 0.4 3 0"
    fill="none"
    stroke="#000"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
</svg>
`;

exports[`drawing.ts SvgDrawing undo() 1`] = `
<svg
  height="0"
  version="1.1"
  width="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M 0 0"
    fill="none"
    stroke="#000"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
</svg>
`;
